# VulkanSharedTextures

./: .gitignore  CMakeLists.txt  README.md
include/app/: consumer_app.hpp  producer_app.hpp
include/core/: descriptor_manager.hpp  pipeline.hpp  swapchain.hpp  vertex_definitions.hpp  vulkan_context.hpp  vulkan_device.hpp  vulkan_utils.hpp
include/ipc/: fd_passing.hpp
include/media/: frame_queue.hpp  image_loader.hpp  texture_image.hpp  texture_video.hpp  video_frame.hpp  video_info.hpp  video_loader.hpp
include/memory/: download_texture.hpp  shm_handler.hpp  shm_video_handler.hpp
include/shm/: shm_viewer.hpp  shm_writer.hpp
include/tools/: benchmark.hpp
include/utils/: file_utils.hpp  logger.hpp  mode_probe.hpp
include/window/: glfw_window.hpp  iapp_window.hpp  sdl_window.hpp
shaders/: fragment.frag  vertex.vert
src/app/: consumer_app.cpp  producer_app.cpp
src/consumer/: main.cpp
src/core/: descriptor_manager.cpp  pipeline.cpp  swapchain.cpp  vertex_definitions.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_utils.cpp
src/ipc/: fd_passing.cpp
src/media/: frame_queue.cpp  image_loader.cpp  texture_image.cpp  texture_video.cpp  video_loader.cpp
src/memory/: download_texture.cpp  shm_handler.cpp  shm_video_handler.cpp
src/producer/: main.cpp
src/shm/: shm_viewer.cpp  shm_writer.cpp
src/tools/: benchmark.cpp
src/utils/: file_utils.cpp  mode_probe.cpp
src/window/: glfw_window.cpp  sdl_window.cpp
